<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.course.memorycolor.GameScreen">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="95"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="50"
        android:title="@string/action_new_game"
        app:showAsAction ="always"
        android:icon="@android:drawable/ic_media_play">

    </item>

    <item
        android:id="@+id/action_player_data"
        android:icon="@drawable/ic_player_data"
        app:showAsAction ="always"
        android:title="@string/action_player_data"
        android:orderInCategory="75">

    </item>

    <item
        android:id="@+id/action_records_game"
        android:title="@string/action_records_game"
        app:showAsAction="never"
        android:orderInCategory="100">
    </item>

    <item
        android:title="@string/number_of_players"
        android:id="@id/action_player_data"
        app:showAsAction="never"
        android:orderInCategory="100">
    </item>
</menu>
